# oomph

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  clean  debug  generate_error.sh  generate_iteration.sh  get_iterations.sh  get_timings.sh  grep_error.sh  headers.awk  main.cc  plot_script  prev.cc
SourceFiles/: Makefile.am  helmholtz_geometric_multigrid.h  pml_helmholtz.h  pml_helmholtz_elements.cc  pml_helmholtz_elements.h  pml_helmholtz_elements.h~  refineable_pml_helmholtz_elements.cc  refineable_pml_helmholtz_elements.h
driver/: Makefile.am  main.cc
multigrid_finite_difference/: mg.m  mg.py  mg_class.py
src/: Makefile.am  billy.h  libbilly.la  pml_fourier_decomposed_helmholtz.h  pml_fourier_decomposed_helmholtz_elements.cc  pml_fourier_decomposed_helmholtz_elements.h  pml_fourier_decomposed_helmholtz_flux_elements.h  pml_helmholtz.h  pml_helmholtz_elements.cc  pml_helmholtz_elements.h  pml_helmholtz_elements.lo  pml_helmholtz_flux_elements.h  refineable_pml_helmholtz_elements.cc  refineable_pml_helmholtz_elements.lo
src/.libs/: libbilly.la  libbilly.lai  libbilly.so.0.0.0
